--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
